--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,18 +1,18 @@
 -#  This file is app/views/movies/index.html.haml
 %h2 All Movies
-= form_tag movies_path, :method => :get do
+= form_tag movies_path, :method => :get,id:"ratings_form" do
   Include:
   - @all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]", '',('checked' if @t_param.include? rating)
-  = submit_tag 'Refresh'
+    = check_box_tag "ratings[#{rating}]", '',('checked' if @ratings.include? rating)
+  = submit_tag 'Refresh',id: "ratings_submit"
 
 %table#movies.table.table-striped.col-md-12
   %thead
     %tr
-      %th{class:('hilite' if @sort=='title')}= link_to "Movie Title" ,movies_path(sort:"title"), id:"title_header"
+      %th{class: ('hilite' if @sort == 'title')}= link_to 'Movie Title',movies_path(sort: 'title',ratings:@ratings),id:"title_header"
       %th Rating
-      %th{class:('hilite' if @sort=='release_date')}= link_to "Release Date", movies_path(sort:"release_date"), id:"release_date_header"
+      %th{class: ('hilite' if @sort == 'release_date')}= link_to 'Release Date',movies_path(sort: 'release_date',ratings:@ratings),id:"release_date_header"
       %th More Info
   %tbody
     - @movies.each do |movie|
